# IX-IntentRealityLoop

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ix_intent_reality_loop/: __init__.py  __main__.py  action.py  arbiter.py  benchmarks.py  blackfox_handoff.py  cli.py  comparison.py  core.py  delta.py  doctrine.py  evidence.py  export.py  feedback.py  focus.py  intent.py  kernel_handoff.py  lanes.py  manifest.py  memory.py  memory_ledger.py  negative_controls.py  permission.py  pipeline.py  replay.py  safety.py
tests/: test_action.py  test_arbiter.py  test_benchmarks.py  test_blackfox_handoff.py  test_cli.py  test_comparison.py  test_core.py  test_delta.py  test_doctrine.py  test_evidence.py  test_export.py  test_feedback.py  test_focus.py  test_intent.py  test_kernel_handoff.py  test_lanes.py  test_manifest.py  test_memory.py  test_memory_ledger.py  test_negative_controls.py  test_package_metadata.py  test_permission.py  test_pipeline.py  test_public_api.py  test_replay.py  test_safety.py
